--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -104,10 +104,12 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 118.194.234.240;
 allow 119.28.139.55;
+allow 120.148.159.146;
 allow 121.78.28.166;
 allow 123.253.35.32;
 allow 124.198.131.108;
@@ -183,7 +185,6 @@ allow 172.232.209.254;
 allow 172.233.240.180;
 allow 172.233.82.41;
 allow 172.234.228.174;
-allow 172.234.245.150;
 allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
@@ -238,7 +239,7 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.30;
+allow 185.104.120.10;
 allow 185.104.120.40;
 allow 185.106.102.102;
 allow 185.107.57.64;
@@ -746,6 +747,7 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:7826::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -898,18 +900,11 @@ allow 217.62.118.174;
 allow 23.129.64.131;
 allow 23.129.64.132;
 allow 23.129.64.134;
-allow 23.129.64.135;
 allow 23.129.64.137;
-allow 23.129.64.138;
-allow 23.129.64.139;
 allow 23.129.64.140;
 allow 23.129.64.141;
-allow 23.129.64.142;
-allow 23.129.64.143;
-allow 23.129.64.144;
 allow 23.129.64.145;
 allow 23.129.64.146;
-allow 23.129.64.148;
 allow 23.129.64.149;
 allow 23.129.64.153;
 allow 23.137.248.100;
@@ -920,6 +915,7 @@ allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.151.8.8;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -979,7 +975,6 @@ allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c07::f03c:95ff:fe1e:22e;
-allow 2600:3c0a::f03c:95ff:fe1e:2a6;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2e5::104;
@@ -994,6 +989,7 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -1083,18 +1079,11 @@ allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2620:18c:0:192::e0:131;
 allow 2620:18c:0:192::e0:132;
 allow 2620:18c:0:192::e0:134;
-allow 2620:18c:0:192::e0:135;
 allow 2620:18c:0:192::e0:137;
-allow 2620:18c:0:192::e0:138;
-allow 2620:18c:0:192::e0:139;
 allow 2620:18c:0:192::e0:140;
 allow 2620:18c:0:192::e0:141;
-allow 2620:18c:0:192::e0:142;
-allow 2620:18c:0:192::e0:143;
-allow 2620:18c:0:192::e0:144;
 allow 2620:18c:0:192::e0:145;
 allow 2620:18c:0:192::e0:146;
-allow 2620:18c:0:192::e0:148;
 allow 2620:18c:0:192::e0:149;
 allow 2620:18c:0:192::e0:153;
 allow 2620:7:6001::101;
@@ -1304,7 +1293,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::30;
+allow 2a06:3000::10;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
@@ -1916,6 +1905,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
