--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -101,6 +101,7 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:7826::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -124,7 +125,6 @@ allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c07::f03c:95ff:fe1e:22e;
-allow 2600:3c0a::f03c:95ff:fe1e:2a6;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2e5::104;
@@ -139,6 +139,7 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -228,18 +229,11 @@ allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2620:18c:0:192::e0:131;
 allow 2620:18c:0:192::e0:132;
 allow 2620:18c:0:192::e0:134;
-allow 2620:18c:0:192::e0:135;
 allow 2620:18c:0:192::e0:137;
-allow 2620:18c:0:192::e0:138;
-allow 2620:18c:0:192::e0:139;
 allow 2620:18c:0:192::e0:140;
 allow 2620:18c:0:192::e0:141;
-allow 2620:18c:0:192::e0:142;
-allow 2620:18c:0:192::e0:143;
-allow 2620:18c:0:192::e0:144;
 allow 2620:18c:0:192::e0:145;
 allow 2620:18c:0:192::e0:146;
-allow 2620:18c:0:192::e0:148;
 allow 2620:18c:0:192::e0:149;
 allow 2620:18c:0:192::e0:153;
 allow 2620:7:6001::101;
@@ -448,7 +442,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::30;
+allow 2a06:3000::10;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
