--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -104,10 +104,12 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 118.194.234.240;
 set_real_ip_from 119.28.139.55;
+set_real_ip_from 120.148.159.146;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 124.198.131.108;
@@ -183,7 +185,6 @@ set_real_ip_from 172.232.209.254;
 set_real_ip_from 172.233.240.180;
 set_real_ip_from 172.233.82.41;
 set_real_ip_from 172.234.228.174;
-set_real_ip_from 172.234.245.150;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
@@ -238,7 +239,7 @@ set_real_ip_from 185.100.87.166;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
-set_real_ip_from 185.104.120.30;
+set_real_ip_from 185.104.120.10;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.107.57.64;
@@ -746,6 +747,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:7826::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -898,18 +900,11 @@ set_real_ip_from 217.62.118.174;
 set_real_ip_from 23.129.64.131;
 set_real_ip_from 23.129.64.132;
 set_real_ip_from 23.129.64.134;
-set_real_ip_from 23.129.64.135;
 set_real_ip_from 23.129.64.137;
-set_real_ip_from 23.129.64.138;
-set_real_ip_from 23.129.64.139;
 set_real_ip_from 23.129.64.140;
 set_real_ip_from 23.129.64.141;
-set_real_ip_from 23.129.64.142;
-set_real_ip_from 23.129.64.143;
-set_real_ip_from 23.129.64.144;
 set_real_ip_from 23.129.64.145;
 set_real_ip_from 23.129.64.146;
-set_real_ip_from 23.129.64.148;
 set_real_ip_from 23.129.64.149;
 set_real_ip_from 23.129.64.153;
 set_real_ip_from 23.137.248.100;
@@ -920,6 +915,7 @@ set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
 set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.155.8.104;
+set_real_ip_from 23.184.48.13;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
 set_real_ip_from 23.191.200.11;
@@ -979,7 +975,6 @@ set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
 set_real_ip_from 2600:3c07::f03c:95ff:fe1e:22e;
-set_real_ip_from 2600:3c0a::f03c:95ff:fe1e:2a6;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
 set_real_ip_from 2602:2e5::104;
@@ -994,6 +989,7 @@ set_real_ip_from 2602:fc24:10:61b::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:9fef::1;
 set_real_ip_from 2602:fc24:12:a679::1;
+set_real_ip_from 2602:fc24:18:a378::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
@@ -1083,18 +1079,11 @@ set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2620:18c:0:192::e0:131;
 set_real_ip_from 2620:18c:0:192::e0:132;
 set_real_ip_from 2620:18c:0:192::e0:134;
-set_real_ip_from 2620:18c:0:192::e0:135;
 set_real_ip_from 2620:18c:0:192::e0:137;
-set_real_ip_from 2620:18c:0:192::e0:138;
-set_real_ip_from 2620:18c:0:192::e0:139;
 set_real_ip_from 2620:18c:0:192::e0:140;
 set_real_ip_from 2620:18c:0:192::e0:141;
-set_real_ip_from 2620:18c:0:192::e0:142;
-set_real_ip_from 2620:18c:0:192::e0:143;
-set_real_ip_from 2620:18c:0:192::e0:144;
 set_real_ip_from 2620:18c:0:192::e0:145;
 set_real_ip_from 2620:18c:0:192::e0:146;
-set_real_ip_from 2620:18c:0:192::e0:148;
 set_real_ip_from 2620:18c:0:192::e0:149;
 set_real_ip_from 2620:18c:0:192::e0:153;
 set_real_ip_from 2620:7:6001::101;
@@ -1304,7 +1293,7 @@ set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
-set_real_ip_from 2a06:3000::30;
+set_real_ip_from 2a06:3000::10;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
@@ -1916,6 +1905,7 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
+set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
