--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -226,15 +226,29 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
 allow 2607:f530:8002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
+allow 2620:18c:0:192::e0:130;
 allow 2620:18c:0:192::e0:131;
 allow 2620:18c:0:192::e0:132;
+allow 2620:18c:0:192::e0:133;
 allow 2620:18c:0:192::e0:134;
+allow 2620:18c:0:192::e0:135;
+allow 2620:18c:0:192::e0:136;
 allow 2620:18c:0:192::e0:137;
+allow 2620:18c:0:192::e0:138;
+allow 2620:18c:0:192::e0:139;
 allow 2620:18c:0:192::e0:140;
 allow 2620:18c:0:192::e0:141;
+allow 2620:18c:0:192::e0:142;
+allow 2620:18c:0:192::e0:143;
+allow 2620:18c:0:192::e0:144;
 allow 2620:18c:0:192::e0:145;
 allow 2620:18c:0:192::e0:146;
+allow 2620:18c:0:192::e0:147;
+allow 2620:18c:0:192::e0:148;
 allow 2620:18c:0:192::e0:149;
+allow 2620:18c:0:192::e0:150;
+allow 2620:18c:0:192::e0:151;
+allow 2620:18c:0:192::e0:152;
 allow 2620:18c:0:192::e0:153;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
@@ -442,7 +456,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
+allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
@@ -634,6 +648,7 @@ allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:2a21::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::132;
 allow 2a0d:bbc7:0:1::1df;
@@ -676,7 +691,6 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
