--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -109,7 +109,6 @@ set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 118.194.234.240;
 set_real_ip_from 119.28.139.55;
-set_real_ip_from 120.148.159.146;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 124.198.131.108;
@@ -239,7 +238,7 @@ set_real_ip_from 185.100.87.166;
 set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
-set_real_ip_from 185.104.120.10;
+set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.107.57.64;
@@ -867,6 +866,7 @@ set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.127.231;
 set_real_ip_from 206.166.251.193;
+set_real_ip_from 206.71.149.89;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.34.15;
@@ -897,15 +897,29 @@ set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.199.199.250;
 set_real_ip_from 217.62.118.174;
+set_real_ip_from 23.129.64.130;
 set_real_ip_from 23.129.64.131;
 set_real_ip_from 23.129.64.132;
+set_real_ip_from 23.129.64.133;
 set_real_ip_from 23.129.64.134;
+set_real_ip_from 23.129.64.135;
+set_real_ip_from 23.129.64.136;
 set_real_ip_from 23.129.64.137;
+set_real_ip_from 23.129.64.138;
+set_real_ip_from 23.129.64.139;
 set_real_ip_from 23.129.64.140;
 set_real_ip_from 23.129.64.141;
+set_real_ip_from 23.129.64.142;
+set_real_ip_from 23.129.64.143;
+set_real_ip_from 23.129.64.144;
 set_real_ip_from 23.129.64.145;
 set_real_ip_from 23.129.64.146;
+set_real_ip_from 23.129.64.147;
+set_real_ip_from 23.129.64.148;
 set_real_ip_from 23.129.64.149;
+set_real_ip_from 23.129.64.150;
+set_real_ip_from 23.129.64.151;
+set_real_ip_from 23.129.64.152;
 set_real_ip_from 23.129.64.153;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
@@ -1076,15 +1090,29 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
+set_real_ip_from 2620:18c:0:192::e0:130;
 set_real_ip_from 2620:18c:0:192::e0:131;
 set_real_ip_from 2620:18c:0:192::e0:132;
+set_real_ip_from 2620:18c:0:192::e0:133;
 set_real_ip_from 2620:18c:0:192::e0:134;
+set_real_ip_from 2620:18c:0:192::e0:135;
+set_real_ip_from 2620:18c:0:192::e0:136;
 set_real_ip_from 2620:18c:0:192::e0:137;
+set_real_ip_from 2620:18c:0:192::e0:138;
+set_real_ip_from 2620:18c:0:192::e0:139;
 set_real_ip_from 2620:18c:0:192::e0:140;
 set_real_ip_from 2620:18c:0:192::e0:141;
+set_real_ip_from 2620:18c:0:192::e0:142;
+set_real_ip_from 2620:18c:0:192::e0:143;
+set_real_ip_from 2620:18c:0:192::e0:144;
 set_real_ip_from 2620:18c:0:192::e0:145;
 set_real_ip_from 2620:18c:0:192::e0:146;
+set_real_ip_from 2620:18c:0:192::e0:147;
+set_real_ip_from 2620:18c:0:192::e0:148;
 set_real_ip_from 2620:18c:0:192::e0:149;
+set_real_ip_from 2620:18c:0:192::e0:150;
+set_real_ip_from 2620:18c:0:192::e0:151;
+set_real_ip_from 2620:18c:0:192::e0:152;
 set_real_ip_from 2620:18c:0:192::e0:153;
 set_real_ip_from 2620:7:6001::101;
 set_real_ip_from 2620:7:6001::102;
@@ -1293,7 +1321,7 @@ set_real_ip_from 2a06:1700:2:148::8493:bcd8;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
-set_real_ip_from 2a06:3000::10;
+set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
@@ -1485,6 +1513,7 @@ set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:6a41:c13:1337::107;
 set_real_ip_from 2a0c:e300::23;
+set_real_ip_from 2a0d:8140:1fff:2a21::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::132;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
@@ -1527,7 +1556,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
-set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1806,6 +1834,7 @@ set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
+set_real_ip_from 5.255.113.177;
 set_real_ip_from 5.255.114.171;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
@@ -1883,7 +1912,6 @@ set_real_ip_from 82.29.128.140;
 set_real_ip_from 82.29.153.76;
 set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
-set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
@@ -1905,7 +1933,6 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
-set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
@@ -1938,10 +1965,10 @@ set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
+set_real_ip_from 93.113.25.239;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
-set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
