--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,6 +66,7 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
+allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -102,6 +103,7 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
+allow 114.172.205.8;
 allow 114.35.245.150;
 allow 118.163.74.160;
 allow 118.193.64.139;
@@ -235,8 +237,6 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
-allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
 allow 185.107.57.64;
@@ -1034,6 +1034,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1215,7 +1216,6 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1322,8 +1322,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
-allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
@@ -1516,6 +1514,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:2a21::1;
+allow 2a0d:8140:1fff:2c04::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::132;
 allow 2a0d:bbc7:0:1::1df;
@@ -1912,6 +1911,7 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 8.211.1.212;
 allow 82.153.138.125;
+allow 82.153.138.241;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
@@ -1935,12 +1935,10 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
-allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
