--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -169,6 +169,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -349,7 +350,6 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
-allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -456,8 +456,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
-allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
@@ -650,6 +648,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:2a21::1;
+allow 2a0d:8140:1fff:2c04::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::132;
 allow 2a0d:bbc7:0:1::1df;
